--- a/src/index.css
+++ b/src/index.css
@@ -4,65 +4,70 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
+    --gradient: linear-gradient(to top left, #780206, #061161);
+    --background: -2 99.85% 98.48%;
+    --foreground: -2 9.7% 0.96%;
 
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
+    --muted: -2 9.7% 92.4%;
+    --muted-foreground: -2 4.85% 42.4%;
 
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
+    --popover: -2 12.400000000000006% 92.4%;
+    --popover-foreground: -2 9.7% 1.2%;
 
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+    --card: -2 12.400000000000006% 92.4%;
+    --card-foreground: -2 9.7% 1.2%;
 
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
+    --border: -2 14.7% 89.96%;
+    --input: -2 14.7% 89.96%;
 
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
+    --primary: -2 97% 24%;
+    --primary-foreground: -2 1.94% 92.4%;
 
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
+    --secondary: -2 4.85% 96.2%;
+    --secondary-foreground: -2 6.82% 12.4%;
+
+    --accent: -2 4.85% 96.2%;
+    --accent-foreground: -2 6.82% 12.4%;
 
     --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
+    --destructive-foreground: 0 0% 98%;
 
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
+    --ring: -2 97% 24%;
 
     --radius: 0.5rem;
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
+    --gradient: linear-gradient(to top left, #c04848, #480048);
 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
+    --background: 0 31.849999999999998% 4.16%;
+    --foreground: 0 4.9% 97.6%;
 
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
+    --muted: 0 24.5% 15.600000000000001%;
+    --muted-foreground: 0 4.9% 55.2%;
 
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
+    --popover: 0 55.2% 6.76%;
+    --popover-foreground: 0 4.9% 97.6%;
 
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
+    --card: 0 55.2% 6.76%;
+    --card-foreground: 0 4.9% 97.6%;
 
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
+    --border: 0 24.5% 15.600000000000001%;
+    --input: 0 24.5% 15.600000000000001%;
 
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
+    --primary: 0 49% 52%;
+    --primary-foreground: 0 4.9% 5.2%;
+
+    --secondary: 0 24.5% 15.600000000000001%;
+    --secondary-foreground: 0 4.9% 97.6%;
+
+    --accent: 0 24.5% 15.600000000000001%;
+    --accent-foreground: 0 4.9% 97.6%;
 
     --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
+    --destructive-foreground: 0 4.9% 97.6%;
 
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
+    --ring: 0 49% 52%;
   }
 }
 
